# Cloud-Insight-AI

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.json  config.yaml  final_report.json  index.html  package-lock.json  pyproject.toml  requirements.txt  script.js  style.css
.github/workflows/: ci.yml  deploy.yml  deploy.yml.disable  release-pypi.yml
data/: cost.json  logs.txt  performance-logs.txt  security-logs.txt
docker/: Dockerfile
examples/: aws_integration.py  basic_usage.py
src/: analyzer.py  comprehend_client.py  cost_processor.py  json_report_generator.py  notification_handler.py
src/Cloud_Insight_AI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cloud_insight_ai/: __init__.py  aws_providers.py  config.py  core.py  cost_processor.py  log_processor.py  providers.py
tests/: __init__.py  test_core.py  test_cost_processor.py  test_log_processor.py  test_providers.py
