[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Cloud-Insight-AI"
version = "0.1.0"
description = ""
requires-python = ">=3.8"
dependencies = [
    "boto3==1.28.85",
    "botocore==1.31.85",
    "PyYAML==6.0.1",
    "requests==2.31.0",
]