[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-insight-ai"
version = "1.0.0"
description = "AWS Cloud Analytics & Intelligence Platform - Containerized cloud monitoring and analysis tool"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MUBENDIRAN", email = "mubiii7722@gmail.com"},
]
maintainers = [
    {name = "MUBENDIRAN", email = "mubiii7722@gmail.com"},
]
keywords = [
    "aws",
    "cloud",
    "monitoring",
    "analysis",
    "intelligence",
    "dashboard",
    "analytics",
    "cost-optimization",
    "boto3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "boto3>=1.26.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
    "build>=0.10.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/MUBENDIRAN/Cloud-Insight-AI"
"Bug Tracker" = "https://github.com/MUBENDIRAN/Cloud-Insight-AI/issues"
Documentation = "https://github.com/MUBENDIRAN/Cloud-Insight-AI/blob/main/README.md"
"Source Code" = "https://github.com/MUBENDIRAN/Cloud-Insight-AI"
Repository = "https://github.com/MUBENDIRAN/Cloud-Insight-AI.git"
Changelog = "https://github.com/MUBENDIRAN/Cloud-Insight-AI/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["cloud_insight_ai*"]
namespaces = false

[tool.setuptools.package-data]
cloud_insight_ai = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/cloud_insight_ai --cov-report=html --cov-report=term"
